--- a/src/index.css
+++ b/src/index.css
@@ -8,20 +8,21 @@
 /********* header *********/
 
 img{
+  margin-top: 20px;
   float: left;
 }
 h1{
+  margin-top: 10px;
   text-shadow: 1px 2px 5px black;
 }
 .header{
   text-align: center;
-  color: #ff8000;
+  color: #ff6600;
   width: 100%;
-  height: 70px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items:center;
-
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   
 }
@@ -32,7 +33,7 @@ h1{
   color: #ff8000;
   margin-top: 100vh;
   text-align: center;
-  height: 50px;
+  height: 80px;
 }
 
 
@@ -56,7 +57,7 @@ h1{
   
 }
 input{
-  color: orange;
+  color: #ff6600;
   margin-top: 10px;
   text-align: center;
   line-height: 10px;
@@ -103,14 +104,14 @@ display: block;
   transition-duration: 0.4s;
 }
 .Button:hover {
-  background-color: orange; /* Green */
+  background-color: #ff6600;; /* Green */
   color: white;
 }
 
 /********  Note ********/
 h2{
 margin-top: 10px;
-color: orange;
+color: #ff6600;
 font-size: 15px;
 text-transform: uppercase;
 }
@@ -129,7 +130,7 @@ button{
   margin-left: 250px;
 }
 .deleteicon:hover{
-  color: orange;
+  color: #ff6600;
 }
 .note{
   margin-top: 30px;
